<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SenseMyMovie</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="new_movie_button">New Movie</string>
    <string name="my_movies_button">My Movies</string>
    <string name="community_button">Community</string>
    <string name="back_button">Back</string>
    <string name="add_movie_button">Add Movie</string>
    <string name="title_activity_show_movies">ShowMoviesActivity</string>
    <string name="title_activity_new_movie">NewMovieActivity</string>
    <string name="movieName_hint">Enter movie name</string>
    <string name="gender_hint">Enter your gender</string>
    <string name="age_hint">Enter your age</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="set_settings_button">Save</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="start_movie_recording">Start recording</string>
    <string name="stop_movie_recording">Stop recording</string>
    <string name="title_activity_comunity">ComunityActivity</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="searchButton">Search</string>
    <string name="searchImdb">Search in IMDB</string>
    <string name="title_activity_find_movie">FindMovieActivity</string>
    <string name="nothing_added">N/A</string>
    <string name="qsensorName">affectivaQ-v2-7d5c</string>

</resources>