<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADD8E6"
    tools:context=".NewMovieActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/movieNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movieName_hint" />

        <EditText
            android:id="@+id/genderTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender_hint" />

        <EditText
            android:id="@+id/ageTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age_hint" />
       
	 <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/add_movie_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/add_movie_button" />

            <Button
                android:id="@+id/new_movie_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/back_button" />
            
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>