<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ADD8E6"
    tools:context=".NewMovieActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <EditText
            android:id="@+id/genderTextField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender_hint"
            android:inputType="textCapCharacters"
            />

        <EditText
            android:id="@+id/ageTextField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age_hint" 
            android:digits="0123456789"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/set_settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/set_settings_button" />

            <Button
                android:id="@+id/settings_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/back_button" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>