<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ADD8E6"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView 
            android:id="@+id/infoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            />
        
        <Button
            android:id="@+id/new_movie_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/new_movie_button" />

        <Button
            android:id="@+id/my_movies_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/my_movies_button" />

        <Button
            android:id="@+id/community_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/community_button" />
        
        
    </LinearLayout>

</RelativeLayout>